fix: try to fix config

--- a/.github/release-please/config.json
+++ b/.github/release-please/config.json
@@ -5,7 +5,7 @@
     "include-component-in-tag": false,
     "group-pull-request-title-pattern": "chore: release ${component} ${version}",
     "packages": {
-        "./proof_verifier_js/ts": {
+        "proof_verifier_js/ts": {
             "component": "@ethproofs-airbender-verifier",
             "extra-files": [
                 {
