--- a/.github/workflows/ci-release-please.yaml
+++ b/.github/workflows/ci-release-please.yaml
@@ -23,7 +23,7 @@ jobs:
   release-please:
     uses: matter-labs/zksync-ci-common/.github/workflows/release-please.yaml@v1
     secrets:
-      gh_token: ${{ secrets.RELEASE_TOKEN }}
+      gh_token: ${{ secrets.GITHUB_TOKEN }}
     with:
       config: '.github/release-please/config.json' # Specify the path to the configuration file
       manifest: '.github/release-please/manifest.json' # Specify the path to the manifest file
